Translate install docs and add zh notice

--- a/docs/northflank.mdx
+++ b/docs/northflank.mdx
@@ -1,53 +1,53 @@
 ---
-title: Deploy on Northflank
+title: 在 Northflank 部署（Deploy on Northflank）
 ---
 
-Deploy OpenClaw on Northflank with a one-click template and finish setup in your browser.
-This is the easiest “no terminal on the server” path: Northflank runs the Gateway for you,
-and you configure everything via the `/setup` web wizard.
+通过一键模板在 Northflank 上部署 OpenClaw，并在浏览器里完成设置。
+这是最容易的“服务器上不需要终端”的路径：Northflank 会为你运行网关，
+而你通过 `/setup` 的网页向导完成配置。
 
-## How to get started
+## 如何开始（How to get started）
 
-1. Click [Deploy OpenClaw](https://northflank.com/stacks/deploy-openclaw) to open the template.
-2. Create an [account on Northflank](https://app.northflank.com/signup) if you don’t already have one.
-3. Click **Deploy OpenClaw now**.
-4. Set the required environment variable: `SETUP_PASSWORD`.
-5. Click **Deploy stack** to build and run the OpenClaw template.
-6. Wait for the deployment to complete, then click **View resources**.
-7. Open the OpenClaw service.
-8. Open the public OpenClaw URL and complete setup at `/setup`.
-9. Open the Control UI at `/openclaw`.
+1. 点击 [Deploy OpenClaw](https://northflank.com/stacks/deploy-openclaw) 打开模板。
+2. 如果还没有账号，在 [Northflank 注册](https://app.northflank.com/signup)。
+3. 点击 **Deploy OpenClaw now**。
+4. 设置必需的环境变量：`SETUP_PASSWORD`。
+5. 点击 **Deploy stack** 构建并运行 OpenClaw 模板。
+6. 等待部署完成，然后点击 **View resources**。
+7. 打开 OpenClaw 服务。
+8. 打开公开的 OpenClaw URL，在 `/setup` 完成配置。
+9. 在 `/openclaw` 打开 Control UI。
 
-## What you get
+## 你将获得（What you get）
 
-- Hosted OpenClaw Gateway + Control UI
-- Web setup wizard at `/setup` (no terminal commands)
-- Persistent storage via Northflank Volume (`/data`) so config/credentials/workspace survive redeploys
+- 托管的 OpenClaw 网关 + Control UI
+- `/setup` 的网页向导（无需终端）
+- Northflank Volume（`/data`）提供持久化存储，配置/凭据/工作区在重部署后仍保留
 
-## Setup flow
+## 配置流程（Setup flow）
 
-1. Visit `https://<your-northflank-domain>/setup` and enter your `SETUP_PASSWORD`.
-2. Choose a model/auth provider and paste your key.
-3. (Optional) Add Telegram/Discord/Slack tokens.
-4. Click **Run setup**.
-5. Open the Control UI at `https://<your-northflank-domain>/openclaw`
+1. 访问 `https://<your-northflank-domain>/setup` 并输入 `SETUP_PASSWORD`。
+2. 选择模型/认证提供方并粘贴 key。
+3. （可选）添加 Telegram/Discord/Slack token。
+4. 点击 **Run setup**。
+5. 在 `https://<your-northflank-domain>/openclaw` 打开 Control UI。
 
-If Telegram DMs are set to pairing, the setup wizard can approve the pairing code.
+如果 Telegram 私聊设置为配对模式，向导可直接批准配对码。
 
-## Getting chat tokens
+## 获取聊天 token（Getting chat tokens）
 
 ### Telegram bot token
 
-1. Message `@BotFather` in Telegram
-2. Run `/newbot`
-3. Copy the token (looks like `123456789:AA...`)
-4. Paste it into `/setup`
+1. 在 Telegram 中私聊 `@BotFather`
+2. 运行 `/newbot`
+3. 复制 token（类似 `123456789:AA...`）
+4. 粘贴到 `/setup`
 
 ### Discord bot token
 
-1. Go to https://discord.com/developers/applications
-2. **New Application** → choose a name
+1. 打开 https://discord.com/developers/applications
+2. **New Application** → 选择名称
 3. **Bot** → **Add Bot**
-4. **Enable MESSAGE CONTENT INTENT** under Bot → Privileged Gateway Intents (required or the bot will crash on startup)
-5. Copy the **Bot Token** and paste into `/setup`
-6. Invite the bot to your server (OAuth2 URL Generator; scopes: `bot`, `applications.commands`)
+4. 在 Bot → Privileged Gateway Intents 下 **Enable MESSAGE CONTENT INTENT**（必需，否则启动会崩）
+5. 复制 **Bot Token** 并粘贴到 `/setup`
+6. 把 bot 邀请进你的服务器（OAuth2 URL Generator；scopes：`bot`, `applications.commands`）
