--- a/docs/railway.mdx
+++ b/docs/railway.mdx
@@ -1,99 +1,99 @@
 ---
-title: Deploy on Railway
+title: 在 Railway 部署（Deploy on Railway）
 ---
 
-Deploy OpenClaw on Railway with a one-click template and finish setup in your browser.
-This is the easiest “no terminal on the server” path: Railway runs the Gateway for you,
-and you configure everything via the `/setup` web wizard.
+通过一键模板在 Railway 上部署 OpenClaw，并在浏览器里完成设置。
+这是最容易的“服务器上不需要终端”的路径：Railway 会为你运行网关，
+而你通过 `/setup` 的网页向导完成配置。
 
-## Quick checklist (new users)
+## 快速清单（新用户）
 
-1. Click **Deploy on Railway** (below).
-2. Add a **Volume** mounted at `/data`.
-3. Set the required **Variables** (at least `SETUP_PASSWORD`).
-4. Enable **HTTP Proxy** on port `8080`.
-5. Open `https://<your-railway-domain>/setup` and finish the wizard.
+1. 点击 **Deploy on Railway**（下方）。
+2. 添加一个挂载到 `/data` 的 **Volume**。
+3. 设置必填 **Variables**（至少 `SETUP_PASSWORD`）。
+4. 在端口 `8080` 上启用 **HTTP Proxy**。
+5. 打开 `https://<your-railway-domain>/setup` 并完成向导。
 
-## One-click deploy
+## 一键部署（One-click deploy）
 
 <a href="https://railway.com/deploy/clawdbot-railway-template" target="_blank" rel="noreferrer">
   Deploy on Railway
 </a>
 
-After deploy, find your public URL in **Railway → your service → Settings → Domains**.
+部署后，在 **Railway → 你的服务 → Settings → Domains** 中找到公开 URL。
 
-Railway will either:
+Railway 会：
 
-- give you a generated domain (often `https://<something>.up.railway.app`), or
-- use your custom domain if you attached one.
+- 生成一个域名（通常为 `https://<something>.up.railway.app`），或
+- 使用你绑定的自定义域名。
 
-Then open:
+然后打开：
 
-- `https://<your-railway-domain>/setup` — setup wizard (password protected)
+- `https://<your-railway-domain>/setup` — 配置向导（密码保护）
 - `https://<your-railway-domain>/openclaw` — Control UI
 
-## What you get
+## 你将获得（What you get）
 
-- Hosted OpenClaw Gateway + Control UI
-- Web setup wizard at `/setup` (no terminal commands)
-- Persistent storage via Railway Volume (`/data`) so config/credentials/workspace survive redeploys
-- Backup export at `/setup/export` to migrate off Railway later
+- 托管的 OpenClaw 网关 + Control UI
+- `/setup` 的网页向导（无需终端）
+- Railway Volume（`/data`）提供持久化存储，配置/凭据/工作区在重部署后仍保留
+- `/setup/export` 备份导出，便于迁移离开 Railway
 
-## Required Railway settings
+## Railway 必要设置（Required Railway settings）
 
-### Public Networking
+### 公网网络（Public Networking）
 
-Enable **HTTP Proxy** for the service.
+为服务启用 **HTTP Proxy**。
 
-- Port: `8080`
+- 端口：`8080`
 
-### Volume (required)
+### Volume（必需）
 
-Attach a volume mounted at:
+挂载一个 Volume 到：
 
 - `/data`
 
 ### Variables
 
-Set these variables on the service:
+在服务中设置以下变量：
 
-- `SETUP_PASSWORD` (required)
-- `PORT=8080` (required — must match the port in Public Networking)
-- `OPENCLAW_STATE_DIR=/data/.openclaw` (recommended)
-- `OPENCLAW_WORKSPACE_DIR=/data/workspace` (recommended)
-- `OPENCLAW_GATEWAY_TOKEN` (recommended; treat as an admin secret)
+- `SETUP_PASSWORD`（必填）
+- `PORT=8080`（必填 — 必须与 Public Networking 端口一致）
+- `OPENCLAW_STATE_DIR=/data/.openclaw`（推荐）
+- `OPENCLAW_WORKSPACE_DIR=/data/workspace`（推荐）
+- `OPENCLAW_GATEWAY_TOKEN`（推荐；请作为管理员密钥保护）
 
-## Setup flow
+## 配置流程（Setup flow）
 
-1. Visit `https://<your-railway-domain>/setup` and enter your `SETUP_PASSWORD`.
-2. Choose a model/auth provider and paste your key.
-3. (Optional) Add Telegram/Discord/Slack tokens.
-4. Click **Run setup**.
+1. 访问 `https://<your-railway-domain>/setup` 并输入 `SETUP_PASSWORD`。
+2. 选择模型/认证提供方并粘贴 key。
+3. （可选）添加 Telegram/Discord/Slack token。
+4. 点击 **Run setup**。
 
-If Telegram DMs are set to pairing, the setup wizard can approve the pairing code.
+如果 Telegram 私聊设置为配对模式，向导可直接批准配对码。
 
-## Getting chat tokens
+## 获取聊天 token（Getting chat tokens）
 
 ### Telegram bot token
 
-1. Message `@BotFather` in Telegram
-2. Run `/newbot`
-3. Copy the token (looks like `123456789:AA...`)
-4. Paste it into `/setup`
+1. 在 Telegram 中私聊 `@BotFather`
+2. 运行 `/newbot`
+3. 复制 token（类似 `123456789:AA...`）
+4. 粘贴到 `/setup`
 
 ### Discord bot token
 
-1. Go to https://discord.com/developers/applications
-2. **New Application** → choose a name
+1. 打开 https://discord.com/developers/applications
+2. **New Application** → 选择名称
 3. **Bot** → **Add Bot**
-4. **Enable MESSAGE CONTENT INTENT** under Bot → Privileged Gateway Intents (required or the bot will crash on startup)
-5. Copy the **Bot Token** and paste into `/setup`
-6. Invite the bot to your server (OAuth2 URL Generator; scopes: `bot`, `applications.commands`)
+4. 在 Bot → Privileged Gateway Intents 下 **Enable MESSAGE CONTENT INTENT**（必需，否则启动会崩）
+5. 复制 **Bot Token** 并粘贴到 `/setup`
+6. 把 bot 邀请进你的服务器（OAuth2 URL Generator；scopes：`bot`, `applications.commands`）
 
-## Backups & migration
+## 备份与迁移（Backups & migration）
 
-Download a backup at:
+下载备份：
 
 - `https://<your-railway-domain>/setup/export`
 
-This exports your OpenClaw state + workspace so you can migrate to another host without losing config or memory.
+这会导出 OpenClaw 的状态 + 工作区，让你可以迁移到其他主机而不丢配置或记忆。
