--- a/docs/render.mdx
+++ b/docs/render.mdx
@@ -1,15 +1,15 @@
 ---
-title: Deploy on Render
+title: 在 Render 部署（Deploy on Render）
 ---
 
-Deploy OpenClaw on Render using Infrastructure as Code. The included `render.yaml` Blueprint defines your entire stack declaratively, service, disk, environment variables, so you can deploy with a single click and version your infrastructure alongside your code.
+使用 Infrastructure as Code 在 Render 上部署 OpenClaw。随附的 `render.yaml` Blueprint 以声明式方式定义整个堆栈（服务、磁盘、环境变量），因此你可以一键部署，并将基础设施与代码一起版本化。
 
-## Prerequisites
+## 前置条件（Prerequisites）
 
-- A [Render account](https://render.com) (free tier available)
-- An API key from your preferred [model provider](/providers)
+- 一个 [Render 账号](https://render.com)（提供免费档）
+- 你偏好的 [模型提供方](/providers) API key
 
-## Deploy with a Render Blueprint
+## 用 Render Blueprint 部署（Deploy with a Render Blueprint）
 
 <a
   href="https://render.com/deploy?repo=https://github.com/openclaw/openclaw"
@@ -19,18 +19,17 @@ Deploy OpenClaw on Render using Infrastructure as Code. The included `render.yam
   Deploy to Render
 </a>
 
-Clicking this link will:
+点击该链接会：
 
-1. Create a new Render service from the `render.yaml` Blueprint at the root of this repo.
-2. Prompt you to set `SETUP_PASSWORD`
-3. Build the Docker image and deploy
+1. 基于本仓库根目录的 `render.yaml` Blueprint 创建新的 Render 服务。
+2. 提示你设置 `SETUP_PASSWORD`
+3. 构建 Docker 镜像并部署
 
-Once deployed, your service URL follows the pattern `https://<service-name>.onrender.com`.
+部署后，服务 URL 形如 `https://<service-name>.onrender.com`。
 
-## Understanding the Blueprint
+## 了解 Blueprint（Understanding the Blueprint）
 
-Render Blueprints are YAML files that define your infrastructure. The `render.yaml` in this
-repository configures everything needed to run OpenClaw:
+Render Blueprint 是定义基础设施的 YAML 文件。本仓库的 `render.yaml` 已配置运行 OpenClaw 所需的一切：
 
 ```yaml
 services:
@@ -56,110 +55,108 @@ services:
       sizeGB: 1
 ```
 
-Key Blueprint features used:
+使用到的关键 Blueprint 特性：
 
-| Feature               | Purpose                                                    |
-| --------------------- | ---------------------------------------------------------- |
-| `runtime: docker`     | Builds from the repo's Dockerfile                          |
-| `healthCheckPath`     | Render monitors `/health` and restarts unhealthy instances |
-| `sync: false`         | Prompts for value during deploy (secrets)                  |
-| `generateValue: true` | Auto-generates a cryptographically secure value            |
-| `disk`                | Persistent storage that survives redeploys                 |
+| 特性                | 作用                                                       |
+| ------------------- | ---------------------------------------------------------- |
+| `runtime: docker`   | 从仓库 Dockerfile 构建                                     |
+| `healthCheckPath`   | Render 监控 `/health` 并重启不健康实例                      |
+| `sync: false`       | 部署时提示输入（机密）                                     |
+| `generateValue: true` | 自动生成高强度随机值                                     |
+| `disk`              | 持久化存储（重部署后仍保留）                               |
 
-## Choosing a plan
+## 选择计划（Choosing a plan）
 
-| Plan      | Spin-down         | Disk          | Best for                      |
+| 计划      | 休眠策略          | 磁盘          | 适用场景                      |
 | --------- | ----------------- | ------------- | ----------------------------- |
-| Free      | After 15 min idle | Not available | Testing, demos                |
-| Starter   | Never             | 1GB+          | Personal use, small teams     |
-| Standard+ | Never             | 1GB+          | Production, multiple channels |
+| Free      | 15 分钟闲置后休眠 | 不支持        | 测试、演示                    |
+| Starter   | 不休眠            | 1GB+          | 个人使用、小团队              |
+| Standard+ | 不休眠            | 1GB+          | 生产、多渠道                  |
 
-The Blueprint defaults to `starter`. To use free tier, change `plan: free` in your fork's
-`render.yaml` (but note: no persistent disk means config resets on each deploy).
+Blueprint 默认 `starter`。如需免费档，请在你的 fork 的 `render.yaml` 中改为 `plan: free`（但注意：无持久化磁盘会导致每次部署重置配置）。
 
-## After deployment
+## 部署后（After deployment）
 
-### Complete the setup wizard
+### 完成设置向导（Complete the setup wizard）
 
-1. Navigate to `https://<your-service>.onrender.com/setup`
-2. Enter your `SETUP_PASSWORD`
-3. Select a model provider and paste your API key
-4. Optionally configure messaging channels (Telegram, Discord, Slack)
-5. Click **Run setup**
+1. 打开 `https://<your-service>.onrender.com/setup`
+2. 输入 `SETUP_PASSWORD`
+3. 选择模型提供方并粘贴 API key
+4. （可选）配置消息渠道（Telegram、Discord、Slack）
+5. 点击 **Run setup**
 
-### Access the Control UI
+### 访问 Control UI（Access the Control UI）
 
-The web dashboard is available at `https://<your-service>.onrender.com/openclaw`.
+Web 仪表盘地址：`https://<your-service>.onrender.com/openclaw`。
 
-## Render Dashboard features
+## Render Dashboard 功能（Render Dashboard features）
 
-### Logs
+### 日志（Logs）
 
-View real-time logs in **Dashboard → your service → Logs**. Filter by:
+在 **Dashboard → your service → Logs** 查看实时日志，可过滤：
 
-- Build logs (Docker image creation)
-- Deploy logs (service startup)
-- Runtime logs (application output)
+- Build logs（Docker 镜像构建）
+- Deploy logs（服务启动）
+- Runtime logs（应用输出）
 
-### Shell access
+### Shell 访问（Shell access）
 
-For debugging, open a shell session via **Dashboard → your service → Shell**. The persistent disk is mounted at `/data`.
+调试时可通过 **Dashboard → your service → Shell** 打开 shell。持久化磁盘挂载在 `/data`。
 
-### Environment variables
+### 环境变量（Environment variables）
 
-Modify variables in **Dashboard → your service → Environment**. Changes trigger an automatic redeploy.
+在 **Dashboard → your service → Environment** 修改变量。变更会触发自动重部署。
 
-### Auto-deploy
+### 自动部署（Auto-deploy）
 
-If you use the original OpenClaw repository, Render will not auto-deploy your OpenClaw. To update it, run a manual Blueprint sync from the dashboard.
+若使用原始 OpenClaw 仓库，Render 不会自动部署你的 OpenClaw。需要更新时，在 Dashboard 手动执行 Blueprint 同步。
 
-## Custom domain
+## 自定义域名（Custom domain）
 
-1. Go to **Dashboard → your service → Settings → Custom Domains**
-2. Add your domain
-3. Configure DNS as instructed (CNAME to `*.onrender.com`)
-4. Render provisions a TLS certificate automatically
+1. 打开 **Dashboard → your service → Settings → Custom Domains**
+2. 添加域名
+3. 按提示配置 DNS（CNAME 指向 `*.onrender.com`）
+4. Render 会自动签发 TLS 证书
 
-## Scaling
+## 扩容（Scaling）
 
-Render supports horizontal and vertical scaling:
+Render 支持水平与垂直扩容：
 
-- **Vertical**: Change the plan to get more CPU/RAM
-- **Horizontal**: Increase instance count (Standard plan and above)
+- **垂直**：升级计划以获得更多 CPU/RAM
+- **水平**：增加实例数量（Standard 及以上）
 
-For OpenClaw, vertical scaling is usually sufficient. Horizontal scaling requires sticky sessions or external state management.
+对 OpenClaw 来说，通常只需垂直扩容。水平扩容需要会话粘性或外部状态管理。
 
-## Backups and migration
+## 备份与迁移（Backups and migration）
 
-Export your configuration and workspace at any time:
+随时导出配置与工作区：
 
 ```
 https://<your-service>.onrender.com/setup/export
 ```
 
-This downloads a portable backup you can restore on any OpenClaw host.
+这会下载一个可移植备份，可在任何 OpenClaw 主机上恢复。
 
-## Troubleshooting
+## 故障排查（Troubleshooting）
 
-### Service won't start
+### 服务无法启动（Service won't start）
 
-Check the deploy logs in the Render Dashboard. Common issues:
+查看 Render Dashboard 的部署日志。常见原因：
 
-- Missing `SETUP_PASSWORD` — the Blueprint prompts for this, but verify it's set
-- Port mismatch — ensure `PORT=8080` matches the Dockerfile's exposed port
+- 未设置 `SETUP_PASSWORD` — Blueprint 会提示输入，但请确认已设置
+- 端口不匹配 — 确保 `PORT=8080` 与 Dockerfile 暴露端口一致
 
-### Slow cold starts (free tier)
+### 冷启动慢（免费档）
 
-Free tier services spin down after 15 minutes of inactivity. The first request after spin-down takes a few seconds while the container starts. Upgrade to Starter plan for always-on.
+免费档服务在 15 分钟无请求后会休眠。首次请求需要几秒来启动容器。若需常驻，升级到 Starter 计划。
 
-### Data loss after redeploy
+### 重部署后数据丢失（Data loss after redeploy）
 
-This happens on free tier (no persistent disk). Upgrade to a paid plan, or
-regularly export your config via `/setup/export`.
+这通常发生在免费档（无持久化磁盘）。升级付费计划，或定期通过 `/setup/export` 导出配置。
 
-### Health check failures
+### 健康检查失败（Health check failures）
 
-Render expects a 200 response from `/health` within 30 seconds. If builds succeed but deploys fail, the service may be taking too long to start. Check:
+Render 期望 `/health` 在 30 秒内返回 200。如果构建成功但部署失败，服务可能启动过慢。请检查：
 
-- Build logs for errors
-- Whether the container runs locally with `docker build && docker run`
+- Build logs 是否报错
+- 容器能否在本地通过 `docker build && docker run` 正常运行
